Override attributes with `eval` (#411)
Fixes #403